--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "e-commerce",
   "version": "0.1.0",
-  "homepage":"https://tijanastojkov.github.io/shop/",
+  "homepage": "https://tijanastojkov.github.io/shop/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "jquery": "^3.5.1",
     "materialize-css": "^1.0.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
@@ -17,9 +18,8 @@
     "react-scripts": "3.4.0"
   },
   "scripts": {
-    
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
