--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-materialize": "^3.5.9",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "predeploy": "npm run build",
